src/test/deca/context/invalid/our_tests/jb-OpCmp-simple1.deca
// Description:
//    OpCmp Contextual error
//
// Resultats:
//    Ligne 11: Operation avec autre chose qu'un entier, un flottant, ou un boolean (OpGauche)
// 
// Historique:
//    cree le 18/01/2017

{
new Object() != 1;
}
